--- a/public/NextPage.css
+++ b/public/NextPage.css
@@ -1,26 +1,27 @@
 .button-container {
-    display: flex;
-    flex-direction: column; 
-    margin-top: 50px;
-  }
-.NextPage-Heading{
-    margin-top: 80px;
-    margin-left: 40px;
-    font-weight: bolder;
-    font-family: Arvo;
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+}
+
+.NextPage-Heading {
+  margin-top: 80px;
+  margin-left: 40px;
+  font-weight: bolder;
+  font-family: Arvo;
   text-transform: uppercase;
-  color: #0c0c0c; 
+  color: #F59115;
   font-size: 4rem;
 }
-  button {
-    background-color: #000000;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-    margin: 20px;
-    max-width: 500px;
-    height: 50px;
-  }
-  
+
+button {
+  background-color: #F59115;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  margin: 20px;
+  max-width: 500px;
+  height: 50px;
+}
